--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "noUncheckedIndexedAccess": false,
     "exactOptionalPropertyTypes": false,
 
-    "types": ["node"]
+    "types": ["node"],
+    "typeRoots": ["./src/types", "./node_modules/@types"]
   },
   "include": ["src"],
   "exclude": ["node_modules"]
